--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,35 @@
 /*  your css code here. If applicable */
+:root{
+	background-color:rgb(135, 206, 235);
+}
+div p:first-child{
+	background-color:black;
+	color: white;
+}
+
+div p: nth-child(2){
+	color:black;
+}
+
+div p:last-child {
+    color: red;
+}
+ul li{
+	background-color: gray;
+}
+ul li:nth-child(odd){
+	background-color:white;
+}
+ul li{
+	width:50%;
+	padding:10px;
+}
+ul li:first-child,
+ul li:last-child{
+	font-size:22px;
+}
+
+ul li:nth-last-child(3){
+	background-color:pink;
+}
+
